apply auto rotation i3

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -65,9 +65,9 @@ separator=true
 #separator=true
 
 [bandwidth]
-full_text = >
+full_text = Net 
 command=~/.config/i3/scripts/bandwidth2
-color=#e07221
+color=#e04221
 interval=persist
 
 [net]
