--- a/i3/config
+++ b/i3/config
@@ -47,9 +47,9 @@ exec_always --no-startup-id xrdb -load ~/.Xresources
 
 # run once
 exec --no-startup-id slimbookbattery
-exec --no-startup-id xfce4-power-manager
-exec --no-startup-id xfsettingsd
-exec --no-startup-id redshift-gtk
+#exec --no-startup-id xfce4-power-manager
+#exec --no-startup-id xfsettingsd
+exec --no-startup-id redshift-gtk -l 37.656:126.83 
 # needed for super to launch rofi through ksuperkey, see ~/.xprofile
 bindsym Mod1+F1 exec --no-startup-id rofi_run -r
 
@@ -247,7 +247,7 @@ popup_during_fullscreen smart
 ############# autostart ################
 exec --no-startup-id  ~/.config/i3/autostart.sh
 ### bluetooth
-exec --no-startup-id blueman-tray
+exec --no-startup-id blueman-applet
 ### nabi
 exec --no-startup-id nabi
 ### toboist
