--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -18,4 +18,5 @@ jobs:
       - name: Create Release
         uses: mikepenz/action-gh-release@v0.2.0-a03 #softprops/action-gh-release
         with:
+          configuration: "configuration.json"
           body: ${{steps.github_release.outputs.changelog}}
