--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,11 +12,13 @@ jobs:
       - name: Build Changelog
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v3
+        with:
+           configuration: "configuration.json"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release
         uses: mikepenz/action-gh-release@v0.2.0-a03 #softprops/action-gh-release
         with:
-          configuration: "configuration.json"
+       
           body: ${{steps.github_release.outputs.changelog}}
