--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   release:
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
       - name: Build Changelog
