--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,10 +1,10 @@
 name: Greetings
-
-on: [push]
-
+on:
+  push:
+    branches: [ main ]
 jobs:
   release:
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
       - name: Build Changelog
