--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches: [ main ]
 jobs:
+  checkout:
+    runs-on: ubuntu-latest
+    steps:
+      - run: ls -al
+      - uses: actions/checkout@v3
   release:
     runs-on: ubuntu-latest
     steps:
