fix: remove unused plugin

--- a/data/nvim/snippets/package.json
+++ b/data/nvim/snippets/package.json
@@ -7,7 +7,13 @@
           "lua"
         ],
         "path": "./lua.json"
-      }
+      },
+	  {
+		"language":[
+			"all"
+		],
+		"path":"./all.json"
+	  }
     ]
   }
 }
