--- a/data/starship/starship.toml
+++ b/data/starship/starship.toml
@@ -1,7 +1,14 @@
 add_newline = true
+
 [character] # The name of the module we are configuring is 'character'
 success_symbol = '[➜](bold green)'
-
+[os]
+disabled = false # Disabled by default
+[username]
+show_always = true
+style = "fg:#9A348E"
+format = '[$user]($style)'
+disabled = false
 
 [aws]
 symbol = "  "
@@ -19,7 +26,13 @@ symbol = " "
 symbol = " "
 
 [directory]
-read_only = " "
+
+format = "[  $path ]($style)"
+truncation_length = 3
+truncation_symbol = "…/"
+
+
+
 
 [docker_context]
 symbol = " "
@@ -137,9 +150,8 @@ symbol = " "
 [spack]
 symbol = "🅢 "
 
+
 [time]
 disabled = false
-format = '🕙[\[ $time \]]($style) '
-time_format = '%T'
-utc_time_offset = '-5'
-time_range = '10:00:00-14:00:00'
+time_format = "%R" # Hour:Minute Format
+format = '[♥ $time]($style)'
