--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -1,9 +1,10 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g @plugin 'rose-pine/tmux'
 # ... alongside
-set -g @plugin 'tmux-plugins/tpm'
 set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+#pluin run
 run '~/.tmux/plugins/tpm/tpm'
