fix: change tmux config path

--- a/data/tmux/tmux.conf
+++ b/data/tmux/tmux.conf
@@ -7,4 +7,4 @@ set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 #pluin run
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
