--- a/data/tmux/tmux.conf
+++ b/data/tmux/tmux.conf
@@ -8,3 +8,5 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 #pluin run
 run '~/.config/tmux/plugins/tpm/tpm'
+#default shell 
+set-option -g default-shell /bin/zsh
