--- a/data/vsc/Settings.json
+++ b/data/vsc/Settings.json
@@ -1,425 +1,73 @@
 {
-	"security.workspace.trust.untrustedFiles": "open",
-	"workbench.colorTheme": "Melange Redux: Light",
-	"remote.autoForwardPortsSource": "hybrid",
-	"terminal.integrated.env.windows": {},
-	"explorer.confirmDragAndDrop": false,
-	"http.proxyAuthorization": null,
-	"vim.leader": "<space>",
-	"vim.handleKeys": {
-		"<space>": true
+	"workbench.colorCustomizations": {
+		"editor.background": "#F1F1F1",
+		"editor.foreground": "#54433A",
+		"activityBar.activeBackground": "#af9494",
+		"activityBar.activeBorder": "#af9494",
+		"activityBarBadge.foreground": "#000000",
+		"activityBarBadge.background": "#ffffff",
+		"activityBar.inactiveForeground": "#ffffff",
+		"editorLineNumber.foreground": "#A98A78",
+		"editor.selectionBackground": "#E9E1DB",
+		"editor.selectionHighlightBackground": "#E9E1DB99",
+		"editorCursor.foreground": "#ddb9a5",
+		"editorWhitespace.foreground": "#A98A7866",
+		"editorIndentGuide.background": "#A98A7844",
+		"editorIndentGuide.activeBackground": "#A98A7888",
+		"editor.findMatchBackground": "#BC5C0066",
+		"editor.findMatchHighlightBackground": "#BC5C0033",
+		"statusBar.background": "#7892BD",
+		"statusBar.foreground": "#F1F1F1",
+		"activityBar.background": "#54433A",
+		"activityBar.foreground": "#F1F1F1",
+		"sideBar.background": "#E9E1DB",
+		"sideBar.foreground": "#54433A",
+		"titleBar.activeBackground": "#7892BD",
+		"titleBar.activeForeground": "#F1F1F1",
+		"terminal.ansiBlack": "#E9E1DB",
+		"terminal.ansiRed": "#C77B8B",
+		"terminal.ansiGreen": "#6E9B72",
+		"terminal.ansiYellow": "#BC5C00",
+		"terminal.ansiBlue": "#7892BD",
+		"terminal.ansiMagenta": "#BE79BB",
+		"terminal.ansiCyan": "#739797",
+		"terminal.ansiWhite": "#7D6658",
+		"terminal.ansiBrightBlack": "#A98A78",
+		"terminal.ansiBrightRed": "#BF0021",
+		"terminal.ansiBrightGreen": "#3A684A",
+		"terminal.ansiBrightYellow": "#A06D00",
+		"terminal.ansiBrightBlue": "#465AA4",
+		"terminal.ansiBrightMagenta": "#904180",
+		"terminal.ansiBrightCyan": "#3D6568",
+		"terminal.ansiBrightWhite": "#54433A"
 	},
-	"vim.normalModeKeyBindingsNonRecursive": [
-		{
-			"before": [
-				".",
-				","
-			],
-			"commands": [
-				"workbench.action.toggleSidebarVisibility"
-			]
-		},
-		{
-			"before": [
-				"d"
-			],
-			"after": [
-				"c"
-			]
-		},
-		{
-			"before": [
-				"e"
-			],
-			"after": [
-				"k"
-			]
-		},
-		{
-			"before": [
-				"f"
-			],
-			"after": [
-				"e"
-			]
-		},
-		{
-			"before": [
-				"i"
-			],
-			"after": [
-				"l"
-			]
-		},
-		{
-			"before": [
-				"j"
-			],
-			"after": [
-				"y"
-			]
-		},
-		{
-			"before": [
-				"k"
-			],
-			"after": [
-				"n"
-			]
-		},
-		{
-			"before": [
-				"K"
-			],
-			"after": [
-				"N"
-			]
-		},
-		{
-			"before": [
-				"l"
-			],
-			"after": [
-				"u"
-			]
-		},
-		{
-			"before": [
-				"n"
-			],
-			"after": [
-				"j"
-			]
-		},
-		{
-			"before": [
-				"o"
-			],
-			"after": [
-				";"
-			]
-		},
-		{
-			"before": [
-				"p"
-			],
-			"after": [
-				"r"
-			]
-		},
-		{
-			"before": [
-				"r"
-			],
-			"after": [
-				"s"
-			]
-		},
-		{
-			"before": [
-				"s"
-			],
-			"after": [
-				"\"",
-				"_",
-				"d"
-			]
-		},
-		{
-			"before": [
-				"s",
-				"s"
-			],
-			"after": [
-				"\"",
-				"_",
-				"d",
-				"d"
-			]
-		},
-		{
-			"before": [
-				"t"
-			],
-			"after": [
-				"f"
-			]
-		},
-		{
-			"before": [
-				"u"
-			],
-			"after": [
-				"i"
-			]
-		},
-		{
-			"before": [
-				"y"
-			],
-			"after": [
-				"o"
-			]
-		},
-		{
-			"before": [
-				"m"
-			],
-			"after": [
-				"h"
-			]
-		},
-		{
-			"before": [
-				";"
-			],
-			"after": [
-				"p"
-			]
-		},
-		{
-			"before": [
-				"g",
-				"t"
-			],
-			"after": [
-				"g",
-				"f"
-			]
-		},
-		{
-			"before": [
-				"<leader>",
-				"h",
-				"v"
-			],
-			"commands": [
-				"editor.action.revealDefinition"
-			]
-		},
-		{
-			"before": [
-				"<leader>",
-				"h",
-				"d"
-			],
-			"commands": [
-				"editor.action.showHover"
-			]
-		},
-		{
-			"before": [
-				"<leader>",
-				"f"
-			],
-			"commands": [
-				"workbench.action.gotoSymbol"
-			]
-		},
-		{
-			"before": [
-				"<leader>",
-				"s",
-				"h"
-			],
-			"commands": [
-				"editor.action.triggerParameterHints"
-			]
-		},
-		{
-			"before": [
-				"<leader>",
-				"o"
-			],
-			"commands": [
-				"outline.focus"
-			]
-		},
-		{
-			"before": [
-				"g",
-				"c"
-			],
-			"commands": [
-				"editor.action.quickFix"
-			]
-		},
-		{
-			"before": [
-				"g",
-				"r"
-			],
-			"commands": [
-				"editor.action.rename"
-			]
-		},
-		{
-			"before": [
-				"[",
-				";"
-			],
-			"commands": [
-				"editor.action.marker.next"
-			]
-		},
-		{
-			"before": [
-				"]",
-				";"
-			],
-			"commands": [
-				"editor.action.marker.prev"
-			]
-		}
-	],
-	"vim.visualModeKeyBindingsNonRecursive": [
-		{
-			"before": [
-				".",
-				","
-			],
-			"commands": [
-				"workbench.action.toggleSidebarVisibility"
-			]
-		},
-		{
-			"before": [
-				"d"
-			],
-			"after": [
-				"c"
-			]
-		},
-		{
-			"before": [
-				"e"
-			],
-			"after": [
-				"k"
-			]
-		},
-		{
-			"before": [
-				"f"
-			],
-			"after": [
-				"e"
-			]
-		},
-		{
-			"before": [
-				"i"
-			],
-			"after": [
-				"l"
-			]
-		},
-		{
-			"before": [
-				"j"
-			],
-			"after": [
-				"y"
-			]
-		},
-		{
-			"before": [
-				"k"
-			],
-			"after": [
-				"n"
-			]
-		},
-		{
-			"before": [
-				"l"
-			],
-			"after": [
-				"u"
-			]
-		},
-		{
-			"before": [
-				"n"
-			],
-			"after": [
-				"j"
-			]
-		},
-		{
-			"before": [
-				"o"
-			],
-			"after": [
-				";"
-			]
-		},
-		{
-			"before": [
-				"p"
-			],
-			"after": [
-				"r"
-			]
-		},
-		{
-			"before": [
-				"r"
-			],
-			"after": [
-				"s"
-			]
-		},
-		{
-			"before": [
-				"s"
-			],
-			"after": [
-				"\"",
-				"_",
-				"d"
-			]
-		},
-		{
-			"before": [
-				"t"
-			],
-			"after": [
-				"f"
-			]
-		},
-		{
-			"before": [
-				"u"
-			],
-			"after": [
-				"i"
-			]
-		},
-		{
-			"before": [
-				"y"
-			],
-			"after": [
-				"o"
-			]
-		},
-		{
-			"before": [
-				"m"
-			],
-			"after": [
-				"h"
-			]
-		},
-		{
-			"before": [
-				";"
-			],
-			"after": [
-				"p"
-			]
-		}
-	],
-	"editor.linkedEditing": true
+	"editor.tokenColorCustomizations": {
+		"strings": "#191313",
+		"functions": "#bd5d00",
+		"keywords": "#bd5d00",
+		"types": "#749998",
+		"variables": "#191313",
+		"comments": "#433a3a",
+		"textMateRules": [
+			{
+				"name": "modifier storage",
+				"scope": [
+					"storage.modifier"
+				],
+				"settings": {
+					"foreground": "#a74e61"
+				}
+			},
+			{
+				"scope": [
+					"variable.language.this"
+				],
+				"settings": {
+					"fontStyle": "italic",
+					"foreground": "#191313"
+				}
+			}
+		]
+	},
+	"workbench.colorTheme": "Visual Studio Light"
 }
