--- a/data/vsc/Settings.json
+++ b/data/vsc/Settings.json
@@ -1,6 +1,20 @@
 {
 	"editor.fontSize": 20,
 	"editor.formatOnSave": true,
+	"vim.statusBarColorControl": false,
+	"workbench.colorTheme": "Default Light+",
+	"vim.incsearch": true,
+	"vim.useSystemClipboard": true,
+	"vim.useCtrlKeys": true,
+	"vim.hlsearch": true,
+	"vim.leader": "<space>",
+	"vim.handleKeys": {
+		"<space>": true
+	},
+	"extensions.experimental.affinity": {
+		"vscodevim.vim": 1
+	},
+	"editor.fontFamily": "jetbrainsMono nerd font mono",
 	"vim.normalModeKeyBindingsNonRecursive": [
 		{
 			"before": [
@@ -580,88 +594,126 @@
 		"terminal.ansiBrightCyan": "#3D6568",
 		"terminal.ansiBrightWhite": "#54433A"
 	},
-	"editor.tokenColorCustomizations": {
-		"strings": "#191313",
-		"functions": "#bd5d00",
-		"keywords": "#bd5d00",
-		"types": "#749998",
-		"variables": "#191313",
-		"comments": "#433a3a",
-		"numbers": "#934682",
-		"textMateRules": [
-			{
-				"name": "modifier storage",
-				"scope": [
-					"storage.modifier"
-				],
-				"settings": {
-					"foreground": "#a74e61"
-				}
-			},
-			{
-				"scope": [
-					"variable.language.this"
-				],
-				"settings": {
-					"fontStyle": "italic",
-					"foreground": "#191313"
-				}
-			},
-			{
-				"scope": [
-					"keyword.operator.arithmetic"
-				],
-				"settings": {
-					"foreground": "#c00828"
-				}
-			},
-			{
-				"scope": [
-					"constant.language.null"
-				],
-				"settings": {
-					"fontStyle": "italic",
-					"foreground": "#be7bbd"
-				}
-			},
-			{
-				"name": "block definition",
-				"scope": [
-					"punctuation.definition.block"
-				],
-				"settings": {
-					"foreground": "#eac096"
-				}
-			},
-			{
-				"scope": [
-					"meta.method.declaration"
-				],
-				"settings": {
-					"foreground": "#2asd37"
-				}
-			},
-			{
-				"scope": [
-					"punctuation.definition.typeparameters"
-				],
-				"settings": {
-					"foreground": "#749998"
-				}
+	"editor.semanticTokenColorCustomizations": {
+		"rules": {
+			"keyword.using": {
+				"foreground": "#ffff99",
+				"fontStyle": "underline"
 			}
-		]
+		}
 	},
-	"workbench.colorTheme": "Visual Studio Light",
-	"vim.easymotion": true,
-	"vim.incsearch": true,
-	"vim.useSystemClipboard": true,
-	"vim.useCtrlKeys": true,
-	"vim.hlsearch": true,
-	"vim.leader": "<space>",
-	"vim.handleKeys": {
-		"<space>": true
-	},
-	"extensions.experimental.affinity": {
-		"vscodevim.vim": 1
+	"editor.tokenColorCustomizations": {
+		"[Default Light+]": {
+			"strings": "#191313",
+			"functions": "#bd5d00",
+			"keywords": "#bd5d00",
+			"types": "#749998",
+			"variables": "#191313",
+			"comments": "#918f8f",
+			"numbers": "#934682",
+			"textMateRules": [
+				{
+					"name": "modifier storage",
+					"scope": [
+						"storage.modifier"
+					],
+					"settings": {
+						"foreground": "#a74e61"
+					}
+				},
+				{
+					"scope": [
+						"variable.language.this"
+					],
+					"settings": {
+						"fontStyle": "italic",
+						"foreground": "#191313"
+					}
+				},
+				{
+					"scope": [
+						"keyword.operator.arithmetic"
+					],
+					"settings": {
+						"foreground": "#c00828"
+					}
+				},
+				{
+					"scope": [
+						"constant.language.null"
+					],
+					"settings": {
+						"fontStyle": "italic",
+						"foreground": "#be7bbd"
+					}
+				},
+				{
+					"name": "block definition",
+					"scope": [
+						"punctuation.definition.block"
+					],
+					"settings": {
+						"foreground": "#eac096"
+					}
+				},
+				{
+					"scope": [
+						"meta.method.declaration"
+					],
+					"settings": {
+						"foreground": "#2asd37"
+					}
+				},
+				{
+					"scope": [
+						"punctuation.definition.typeparameters"
+					],
+					"settings": {
+						"foreground": "#749998"
+					}
+				},
+				{
+					"name": "keyword.other",
+					"scope": [
+						"keyword.other.directive.using.cs"
+					],
+					"settings": {
+						"foreground": "#a74e61"
+					}
+				},
+				{
+					"name": "keyword.other",
+					"scope": [
+						"keyword.type.void.cs",
+						"constant.language.boolean",
+						"keyword.type.bool.cs"
+					],
+					"settings": {
+						"foreground": "#a74e61"
+					}
+				},
+				{
+					"name": "keyword.other",
+					"scope": [
+						"variable.language.base.cs"
+					],
+					"settings": {
+						"foreground": "#373741"
+					}
+				},
+				{
+					"name": "keyword.other",
+					"scope": [
+						"keyword.preprocessor.endif.cs",
+						"punctuation.separator.hash.cs",
+						"keyword.preprocessor.if.cs",
+						"keyword.preprocessor.else.cs"
+					],
+					"settings": {
+						"foreground": "#7d7daa"
+					}
+				}
+			]
+		}
 	}
 }
