feat: change starshit color

--- a/data/starship/starship.toml
+++ b/data/starship/starship.toml
@@ -27,7 +27,7 @@ symbol = " "
 
 [directory]
 
-format = "[  $path ]($style)"
+format = "[ 📜 $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
 
