--- a/data/helix/languages.toml
+++ b/data/helix/languages.toml
@@ -79,10 +79,11 @@ formatter = { command = 'prettier', args = ["--parser", "css"] }
 auto-format = true
 
 
-
 [language-server.astro-ls]
 command = "astro-ls"
+auto-format = true
 args = [ "--stdio" ]
+config = { "typescript" = { "tsdk" = "/usr/lib/node_modules/typescript/lib"}, "environment" = "node" }
 
 [[language]]
 name = "astro"
@@ -90,6 +91,8 @@ scope = "source.astro"
 injection-regex = "astro"
 file-types = ["astro"]
 roots = ["package.json", "astro.config.mjs"]
-language-servers = [ "astro-ls", "tailwindcss-ls" ]
+language-servers = [ "astro-ls" ]
 auto-format = true
 formatter = { command = "prettier", args = ["--parser", "astro"] }
+
+
