fix: select range move correctly on helix

--- a/data/helix/config.toml
+++ b/data/helix/config.toml
@@ -29,8 +29,7 @@ j="yank"
 k="no_op"
 l="no_op"
 ";"="paste_after"
-
-
+C-f = [":new", ":insert-output lf-pick", "select_all", "split_selection_on_newline", "goto_file", "goto_last_modified_file", ":buffer-close!", ":redraw"]
 # d_c
 # h_m
 # j_y
@@ -38,10 +37,10 @@ l="no_op"
 # l_i
 
 [keys.select]
-m="move_char_left"
-n="move_visual_line_down"
-e="move_visual_line_up"
-i="move_char_right"
+m="extend_char_left"
+n="extend_visual_line_down"
+e="extend_visual_line_up"
+i="extend_char_right"
 s="delete_selection_noyank"
 h="no_op"
 j="yank"
