--- a/data/tmux/tmux.conf
+++ b/data/tmux/tmux.conf
@@ -10,3 +10,33 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 run '~/.config/tmux/plugins/tpm/tpm'
 #default shell 
 set-option -g default-shell /bin/zsh
+# vim mode keyboard settings
+# 왼쪽
+bind-key -T copy-mode-vi m send-keys -X cursor-left
+# 오른쪽
+bind-key -T copy-mode-vi i send-keys -X cursor-right
+#
+bind-key e next-window     # prefix + e: 다음 window로 이동
+bind-key n previous-window # prefix + n: 이전 window로 이동
+# Copy 모드에서 n/e로 위아래 이동
+bind-key -T copy-mode e send-keys -X cursor-up
+bind-key -T copy-mode n send-keys -X cursor-down
+
+# Copy 모드 (vi)에서 n/e로 위아래 이동  
+bind-key -T copy-mode-vi e send-keys -X cursor-up
+bind-key -T copy-mode-vi n send-keys -X cursor-down
+
+# 메뉴 네비게이션을 위한 별도 접근법:
+
+
+
+# run plugin
+bind -n M-o display-popup -w 90% -h90% -E "crush"
+#..select files 
+bind -n M-r copy-mode -e \; send-keys -X search-backward \
+  '(^|/|\<|[[:space:]"])((\.|\.\.)|[[:alnum:]~_"-]*)((/[][[:alnum:]_.#$%&+=@"-]+)+([/ "]|\.([][[:alnum:]_.#$%&+=@"-]+(:[0-9]+)?(:[0-9]+)?)|[][[:alnum:]_.#$%&+=@"-]+(:[0-9]+)(:[0-9]+)?)|(/[][[:alnum:]_.#$%&+=@"-]+){2,}([/ "]|\.([][[:alnum:]_.#$%&+=@"-]+(:[0-9]+)?(:[0-9]+)?)|[][[:alnum:]_.#$%&+=@"-]+(:[0-9]+)(:[0-9]+)?)?|(\.|\.\.)/([][[:alnum:]_.#$%&+=@"-]+(:[0-9]+)?(:[0-9]+)?))'
+
+
+# copy-mode에서 a를 누르면 nvim 실행 (vi 모드가 아닌 일반 copy-mode)
+bind-key -T copy-mode a send-keys -X copy-pipe-and-cancel \
+  'cd #{pane_current_path}; xargs tmux new-window nvim'
