--- a/data/tmux/tmux.conf
+++ b/data/tmux/tmux.conf
@@ -2,10 +2,15 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'rose-pine/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -s escape-time 1
 # ... alongside
 set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g history-limit 10000
+set -g base-index 1
+setw -g pane-base-index 1
 #pluin run
 run '~/.config/tmux/plugins/tpm/tpm'
 #default shell 
